--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="es">
     <head>
       <meta charset="UTF-8" />
-      <title>Ana Cristina Martínez Martell</title>
+      <title>Ana Cristina Martínez Martell prueba</title>
       <link rel="icon" type="image/png" href="C:\Users\PC\Desktop\desarrollo web\Ana\imagenes/icono.png"/>
       <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Modak&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/estilos.css">
