--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="icon" type="image/png" href="https://i.imgur.com/dTIqlYK.png"/>
       <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Modak&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/estilos.css">
+      <link rel="stylesheet" href="css/media.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
