quedo responsive hasta llegar a la parte de contacto

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </article>
       </div>
       </section>
-      <!-- <div class="container">
+      <div class="container">
       <h2>Más sobre mi trabajo</h2>
     </div>
       <section id="MiTrabajo" class="event-list">
@@ -102,7 +102,7 @@
         </article>
       </div>
       </section>
-      <section id = "Contactame" class="contact">
+     <section id = "Contactame" class="contact">
         <div class="container">
         <form action="/suscripcion/" class="from-email">
           <h3>Contactame!</h3>
@@ -114,8 +114,8 @@
           <a href="https://www.instagram.com/anacmtzmartell/" class="social-link instagram"></a>
         </div>
       </div>
-      </section>
-      <footer class="footer">
+      </section> -->
+       <footer class="footer">
         <div class="container">
         <div>
           <p>Pagina desarrollada Por: <strong>Mauro A. Alvarado Rodríguez.</strong></p>
@@ -124,6 +124,6 @@
           INSTAGRAM: <a href="https://www.instagram.com/drix_mx/">@drix_mx</a>
         </div>
       </div>
-      </footer> -->
+      </footer>  
     </body>
   </html>
