ya quedo todo responsive solo faltan ajustes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <a href="https://www.instagram.com/anacmtzmartell/" class="social-link instagram"></a>
         </div>
       </div>
-      </section> -->
+      </section> 
        <footer class="footer">
         <div class="container">
         <div>
