--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           </nav>
           </div>
       </header>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
-        <h1>
+        <h1 class="holaa">
           Hola! Soy <strong>Ana Cristina Martínes Martell</strong> <br/> <strong>Fotografa de viejitos,</strong> con <br> pasión por los <strong>perritos</strong>
         </h1>
-        <a href="https://imgur.com/MhnP6xh"><img src="https://i.imgur.com/MhnP6xh.png" width="500" height="300" alt="imagen principal del sitio" /></a>
+        <a href="https://imgur.com/MhnP6xh"><img src="https://i.imgur.com/MhnP6xh.png" alt="imagen principal del sitio" /></a>
     </div>
-      </section> -->
+      </section> 
       <section id ="portafolio" class="portafolio1">
         <div class="container">
         <h2>Portafolio (<strong>Proyectos Destacados</strong>)</h2>
