se agrego la parte del video

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         </article>
       </div>
       </section>
+      <section class="video1">
+        <div class="contenedor-camara">
+          <h2>camara</h2>
+        </div>
+      </section>
       <div class="container">
       <h2>Más sobre mi trabajo</h2>
     </div>
