ya quedo toño se agrego video de la camara que se usan para los trabajos

--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
       </section>
       <section class="video1">
         <div class="contenedor-camara">
-          <h2>camara</h2>
+          <h2>review de la <strong>camara</strong> que uso</h2>
+            <div class="camarita">
+              <iframe class="youtube-video" src="https://www.youtube.com/embed/LH_c4qqk2ns" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
       </section>
       <div class="container">
-      <h2>Más sobre mi trabajo</h2>
+      <h2>Más sobre <strong>mi</strong> trabajo</h2>
     </div>
       <section id="MiTrabajo" class="event-list">
         <div class="container">
