se corrigio error de dedo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="hero">
         <div class="container">
         <h1 class="holaa">
-          Hola! Soy <strong>Ana Cristina Martínes Martell</strong> <br/> <strong>Fotografa de viejitos,</strong> con <br> pasión por los <strong>perritos</strong>
+          Hola! Soy <strong>Ana Cristina Martínez Martell</strong> <br/> <strong>Fotografa de viejitos,</strong> con <br> pasión por los <strong>perritos</strong>
         </h1>
         <a href="https://imgur.com/MhnP6xh"><img src="https://i.imgur.com/MhnP6xh.png" alt="imagen principal del sitio" /></a>
     </div>
